# ContentIQ

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: metadata.py
app/services/: blob_storage.py  event_bus.py  metadata_service.py
azure_functions/metadata_propagator/: function_app.py
kubernetes/: contentiq-deployment.yaml  kafka.yaml
scripts/: load_test.py
tests/: test_metadata_api.py
